feat: added firebase

--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "server": "cd ./db && json-server --watch ./db.json --port 3004",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && firebase deploy"
   },
   "eslintConfig": {
     "extends": [
